--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tabler/icons": "^1.106.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-useanimations": "^2.0.8"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
